--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>Buffet Manager</h1>
 <!-- Footer -->
 <!-- Footer -->
-
+<div class="wrapper">
 <footer class="bg-light text-center ">
   <!-- Grid container -->
   <div class="container p-4">
@@ -156,6 +156,7 @@
   <!-- Copyright -->
 
 </footer>
+</div>
 <!-- Footer -->
 <!-- Footer -->
 </body>
