--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<?php
-
-?>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -26,22 +23,42 @@
 
 
 <div class="arriba">
-  <form action="./crear.php" method="POST">
+  <form id="create-room-form" action="./crear.php" method="POST">
     <fieldset>
-      <label for="fname"  class="lName">Username</label><br>
+      <label for="fname" class="lName">Username</label><br>
       <input type="text" name="username" id="fname" placeholder="User"><br>
 
-      <input type="submit" name="create_room" value="Create Room" class="styled"> 
+      <input type="submit" name="create_room" value="Create Room" class="styled">
     </fieldset>
-  </form> 
-  <form action="/action_page.php">
+  </form>
+  <form id="join-room-form" action="./join.php" method="POST">
     <fieldset>
+      <label for="fname" class="lName">Username</label><br>
+      <input type="text" name="username" id="fname" placeholder="User"><br>
+
       <label for="code" class="lName">Room code</label><br>
-      <input type="number" id="code" name="code" class="noscroll" required><br>
-      <input type="submit" value="Join Room" class="styled"></input>
+      <input type="number" id="code" name="room_code" required placeholder="0000" min><br>
+      <!-- Campo oculto para enviar el nombre de usuario -->
+      <input type="submit" value="Join Room" class="styled">
     </fieldset>
   </form>
 </div>
+
+<script>
+  // Obtener el formulario de creación de sala
+  const createRoomForm = document.getElementById('create-room-form');
+  // Obtener el campo de nombre de usuario en el formulario de creación de sala
+  const usernameInput = createRoomForm.querySelector('input[name="username"]');
+  // Obtener el campo de nombre de usuario en el formulario de unirse a la sala
+  const joinUsernameInput = document.getElementById('join-username');
+  
+  // Agregar un evento de envío al formulario de creación de sala
+  createRoomForm.addEventListener('submit', function(event) {
+    // Actualizar el valor del campo de nombre de usuario en el formulario de unirse a la sala
+    document.getElementById('join-username').value = document.getElementById('fname').value;
+  });
+</script>
+
 <script>
 
 
@@ -55,150 +72,27 @@ document.addEventListener("wheel", function(event){
   </script>
 
 <div class="wrapper">
-<footer class="bg-light text-center ">
-
-  <div class="bg-img">
-  <!-- Grid container -->
-  <div class="container p-4">
-
-    <!-- Section: Social media -->
-    <section class="mb-4">
-      <!-- Facebook -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
-
-      <!-- Twitter -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i class="fab fa-twitter"></i></a>
-
-      <!-- Google -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i class="fab fa-google"></i></a>
-
-      <!-- Instagram -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i class="fab fa-instagram"></i></a>
-
-      <!-- Linkedin -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
-      <!-- Github -->
-      <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i class="fab fa-github"></i></a>
-    </section>
-    <!-- Section: Social media -->
-
-
-
-    <!-- Section: Text -->
-    <section class="mb-4">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
-        distinctio earum repellat quaerat voluptatibus placeat nam,
-        commodi optio pariatur est quia magnam eum harum corrupti dicta,
-        aliquam sequi voluptate quas.
-      </p>
-    </section>
-    <!-- Section: Text -->
-
-
-    <!-- Section: Links -->
-    <section class="">
-      <!--Grid row-->
-      <div class="row">
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-dark">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 4</a>
-            </li>
-          </ul>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-dark">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 4</a>
-            </li>
-          </ul>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-dark">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 4</a>
-            </li>
-          </ul>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Links</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-dark">Link 1</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 2</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 3</a>
-            </li>
-            <li>
-              <a href="#!" class="text-dark">Link 4</a>
-            </li>
-          </ul>
-        </div>
-        <!--Grid column-->
+<footer class="bg-light text-center py-4">
+  <div class="container">
+    <div class="row">
+      <!-- Columna de texto -->
+      <div class="col-md-6">
+        <p class="mb-0">
+          Made with &lt;/&gt; during HackUPC24
+        </p>
       </div>
-      <!--Grid row-->
-    </section>
-    <!-- Section: Links -->
-
+      <!-- Fin de la columna de texto -->
+      <!-- Columna de enlace -->
+      <div class="col-md-6">
+        <p class="mb-0">
+          <a href="https://github.com/Tekhmos-Corp" class="text-dark">Tekhmos Corp.</a>
+        </p>
+      </div>
+      <!-- Fin de la columna de enlace -->
+    </div>
   </div>
-  <!-- Grid container -->
-
-  <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-    © 2024 Copyright:
-    <a class="text-dark" href="https://github.com/Tekhmos-Corp">Tekhmos Corp.</a>
-  </div>
-  <!-- Copyright -->
-</div>
 </footer>
+
 </div>
 <!-- Footer -->
 <!-- Footer -->
